Preemptively fix navigation bug and spacing issue

--- a/stem-explorer-ng/src/app/containers/drawer/drawer.component.scss
+++ b/stem-explorer-ng/src/app/containers/drawer/drawer.component.scss
@@ -4,6 +4,6 @@ button, a {
 
     mat-icon {
         float: right;
-        margin: 6px 0;
+        margin: 6px;
     }
 }
